# Langgraph_Study

./: 1_simple_workflow.ipynb  2_chatbot_w_langgraph.ipynb  3_stateschemas.ipynb  4_chains_w_langgraph.ipynb  pyproject.toml  requirements.txt
Debugging/: langgraph.json  openai_agent.py
workflow_types/: evaluator_optimizer.ipynb
